README: change reference format

--- a/README
+++ b/README
@@ -68,7 +68,7 @@ Note.
 
 References
 ----------
-[1]: R. Ikeda, H. Kusaka, S. Iizuka, and T. Boku, "Development of Urban Meteorological LES model for thermal environment at city scale," 2015.
+[1]: Ikeda, R., H. Kusaka, S. Iizuka, T. Boku, Development of Urban Meteorological LES model for thermal environment at city scale. 9th International Conference for Urban Climate, Toulouse, France, 2015.
 
 External Link
 -------------
